--- a/components/HomeComponent/header/header.module.scss
+++ b/components/HomeComponent/header/header.module.scss
@@ -31,6 +31,9 @@
     position: relative;
     bottom: 20px;
   }
+  .dsnicon{
+    display: none;
+  }
 }
 .carouselbox {
   display: "flex";
@@ -40,4 +43,26 @@
   text-align: "center";
   position: relative;
   bottom: 20px;
+}
+
+@media screen and (max-width: 1220px){
+  .header_navigation{position: relative;}
+  .header_navigation .dsnicon{
+    display: block;
+    float: right;
+    position: absolute;
+    right: 0;
+    top: 10px;
+  }
+  .header_navigation a{
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header_navigation a:not(:first-child) {display: none;}
+  .header_navigation .dsnicon {
+    float: right;
+    display: block;
+  }
+  
 }
