add login/register page

--- a/components/LoginComponent/footer/footer.module.scss
+++ b/components/LoginComponent/footer/footer.module.scss
@@ -3,7 +3,10 @@
     text-align: center;
     margin-top: 100px;
     position: fixed;
-    bottom: 0;
+    bottom: 50px;
+    .buttongroup{
+        margin-bottom: 20px;
+    }
     .footer{
         font-size: 10px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
