--- a/components/MemberComponent/img-carousel/carousel.module.scss
+++ b/components/MemberComponent/img-carousel/carousel.module.scss
@@ -1,8 +1,24 @@
-.item{
-    width: 500px;
-    height: 400px;
-    z-index: 100;
-    &:hover{
-        transform:scale(1.2)
+.item {
+  width:100%;
+  height: 400px;
+  z-index: 100;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+.box{
+    background-color: rgba($color: #000000, $alpha: 0.3);
+    width: 78%;
+    height: 50px;
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    a{
+        text-decoration: none;
+        color: #000000;
+    }
+    p{
+        font-size: 10px;
+        font-weight: 400;
+        
     }
 }
