--- a/components/MemberComponent/middle/middle.module.scss
+++ b/components/MemberComponent/middle/middle.module.scss
@@ -2,13 +2,14 @@
     max-width: 100%;
     .introduceCard{
         margin-left: 10px;
+        margin-top: 50px;
         h2{
             font-family: 'Courier New', Courier, monospace;
             margin-bottom: 10px;
             text-align: center;
             font-size: 70px;
-            color: #a80000;
-            border-bottom: 5px solid coral;
+            color: #000;
+            border-bottom: 5px solid blue;
             width: 500px;
             margin:  0 auto;
         }
