--- a/src/components/LoginComponent/Header/header.module.scss
+++ b/src/components/LoginComponent/Header/header.module.scss
@@ -1,3 +1,6 @@
+.box{
+  background-color: #fff;
+}
 .root {
   font-size: 25px;
   font-weight: 500;
@@ -8,11 +11,31 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: #888;
+  color: #000;
 }
 .buttongroup{
   float: right;
   position: relative;
   bottom: 65px;
   margin-right: 100px;
+}
+
+@media screen and (max-width:1010px) {
+  .box{
+    .root{
+      margin-left: 0;
+    }
+    .buttongroup{
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width:460px) {
+  .box{
+    .root{
+      font-size: 20px;
+      margin-left: 5px;
+    }
+  }
 }
