--- a/src/components/RegisterComponent/regform/regform.module.scss
+++ b/src/components/RegisterComponent/regform/regform.module.scss
@@ -1,40 +1,79 @@
-.root{
-    width: 100%;
-    padding-top: 100px;
-    text-align: center;
-    height: 700px;
-    background-image: url('../../../assets//images//regbackimg1.jpeg');
-    .form{
+.root {
+  width: 100%;
+  padding-top: 100px;
+  text-align: center;
+  height: 700px;
+  background-image: url("../../../assets//images//regbackimg1.jpeg");
+  .form {
+    background-color: white;
+    width: 30%;
+    height: 500px;
+    margin: 0 auto;
+  }
+  h3 {
+    color: #000;
+    border-bottom: 1px solid rgba($color: #888888, $alpha: 0.5);
+    margin-top: 20px;
+    font-size: 20px;
+    height: 50px;
+    line-height: 50px;
+    color: #888;
+  }
+  .input {
+    width: 60%;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(226, 213, 213);
+    border-bottom: none;
+  }
+  .buttongroup {
+    width: 60%;
+    background-color: #fff;
+    .button {
+      width: 100%;
+      background-color: cornflowerblue;
+      color: #fff;
+    }
+  }
+  .link {
+    text-decoration: none;
+    font-size: 15px;
+    margin-right: 210px;
+    color: cornflowerblue;
+  }
+}
+
+@media screen and (max-width: 1215px) {
+  .root {
+    .form {
+      background-color: white;
+      width: 50%;
+      height: 500px;
+      margin: 0 auto;
+    }
+  }
+}
+
+@media screen and (max-width: 820px) {
+    .root {
+      .form {
         background-color: white;
-        width: 30%;
+        width: 100%;
         height: 500px;
         margin: 0 auto;
+      }
     }
-    h3{
-        color: #000;
-        border-bottom: 1px solid rgba($color: #888888, $alpha: 0.5);
-        margin-top: 20px;
-        font-size: 20px;
-    }
-    .input{
-        width: 60%;
-        background-color: rgb(255, 255, 255);
-        border: 1px solid rgb(226, 213, 213);
-        border-bottom: none;
-    }
-    .buttongroup{
-        width: 60%;
-        background-color: #fff;
-        .button{
-            width: 100%;
-            background-color: cornflowerblue;
-            color: #fff;
-        }
+  }
+
+  @media screen and (max-width: 335px) {
+    .root {
+      .form {
+        background-color: white;
+        width: 100%;
+        height: 500px;
+        margin: 0 auto;
+      }
     }
     .link{
-        text-decoration: none;
-        font-size: 15px;
-        margin-right: 210px;
-        color: cornflowerblue;
+        margin-right: 150px;
     }
-}
+  }
