Fix some problems with the page

--- a/components/TeamComponent/styles.module.scss
+++ b/components/TeamComponent/styles.module.scss
@@ -19,6 +19,7 @@
     .imageListItem{
         margin-right: 2rem;
         margin-top: 2rem;
+        width: 100%;
         &:hover .imageListItemBar{
             display: flex;
             position: absolute;
